<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/greet"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        />
    <Button
        android:id="@+id/numbers_button"
        android:layout_width="128dp"
        android:layout_height="64dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="48dp"
        android:text="@string/numbers"/>
    <Button
        android:id="@+id/math_button"
        android:layout_width="128dp"
        android:layout_height="64dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="48dp"
        android:text="@string/math"/>
    <Button
        android:id="@+id/years_button"
        android:layout_width="128dp"
        android:layout_height="64dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="48dp"
        android:text="@string/years"/>
    <Button
        android:id="@+id/dates_button"
        android:layout_width="128dp"
        android:layout_height="64dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:text="@string/dates"/>

</LinearLayout>
