<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/in_number"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        />

    <EditText
        android:id="@+id/numbers_edit"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:inputType="number"/>

    <Button
        android:id="@+id/go_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/go"
        android:layout_marginBottom="24dp"/>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/go_random"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        />

    <Button
        android:id="@+id/randomize_button"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/randomize"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>